
[dependencies]
  fastly = "^0.8.0"
  http = "0.2.1"
  log-fastly = "^0.1.0"
  regex = "1.3.9"
  log = "0.4.8"
  #percentage = "0.1.0"
  percentage = { path = "../../other/percentage-0.1.0" }
  rand = "0.7.3"
  #luhn = "1.0.0"
  luhn = { path = "../../other/luhn-rs" }
  config = "0.11.0"

[package]
  authors = []
  edition = "2018"
  name = "edge-data-exfil"
  publish = false
  version = "0.1.0"

[profile]

  [profile.release]
    debug = 1
